Prevent overflow in main section

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -43,6 +43,7 @@ img{
     margin: 0 auto;
     display: grid;
     gap: 1.5rem;
+    overflow: hidden;
 
     .main-heading{
         font-size: clamp(1.75rem, 1.662rem + 0.3756vw, 2rem);
